[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acquisition"
version = "0.0.1"
description = "Control Acquisition Role Access"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
    "frappe>=16.0.0"
]

[tool.bench]
frappe-dependencies = [
    "frappe"
]
readme = "README.md"
license = { text = "MIT" }


